[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/testing/test-mech/PlayerMechTesting.gd" type="Script" id=1]
[ext_resource path="res://scenes/testing/test-mech/entities/NavPoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/testing/test-mech/PlayerTestMech.tscn" type="PackedScene" id=3]

[sub_resource type="SphereMesh" id=1]


[sub_resource type="CubeMesh" id=2]


[sub_resource type="SpatialMaterial" id=3]

albedo_color = Color( 0, 1, 0.25098, 1 )

[sub_resource type="SpatialMaterial" id=4]

albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=5]

margin = 0.1
extents = Vector3( 2000, 1, 2000 )

[sub_resource type="CubeMesh" id=6]

size = Vector3( 4000, 1, 4000 )

[sub_resource type="SpatialMaterial" id=7]

albedo_color = Color( 0.831373, 0.670588, 0.447059, 1 )

[sub_resource type="ProceduralSky" id=8]

sky_top_color = Color( 0, 0.235294, 0.372549, 1 )
sky_horizon_color = Color( 0.937255, 0.662745, 0.270588, 1 )
sky_curve = 0.0731027
sun_latitude = -2.08
sun_longitude = -66.2

[sub_resource type="Environment" id=9]

background_mode = 2
background_sky = SubResource( 8 )
glow_enabled = true
glow_levels/1 = true
glow_levels/4 = true
glow_levels/5 = false
glow_blend_mode = 1
glow_bicubic_upscale = true

[sub_resource type="CubeMesh" id=10]

size = Vector3( 50, 70, 50 )

[sub_resource type="BoxShape" id=11]

margin = 0.1
extents = Vector3( 25, 35, 25 )

[node name="PlayerMechTesting" type="Spatial"]
script = ExtResource( 1 )

[node name="NavPoints" type="Spatial" parent="."]

[node name="NavPoint" parent="NavPoints" instance=ExtResource( 2 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -99.605, 20, 47.348 )

[node name="MeshInstance" type="MeshInstance" parent="NavPoints/NavPoint"]
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="NavPoint2" parent="NavPoints" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 945.713, 20, 1704.19 )
navpoint_name = "Nav Beta"

[node name="NavPoint3" parent="NavPoints" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 673.343, 20, 0 )
navpoint_name = "Nav Gamma"

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.2272, 27.882 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.18025, 27.882 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Ground" type="StaticBody" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="PlayerTestMech" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.4254, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.0649482, 0.0393998, -0.997111, 0, 0.99922, 0.0394832, 0.997889, 0.00256436, -0.0648976, 0, 34.97, 0 )

[node name="Structures" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Structures"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -242.395, 35.2952, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Structures/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="Structures/MeshInstance/StaticBody"]
shape = SubResource( 11 )

[node name="MeshInstance3" type="MeshInstance" parent="Structures"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 468.656, 35.2952, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="StaticBody2" type="StaticBody" parent="Structures/MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="Structures/MeshInstance3/StaticBody2"]
shape = SubResource( 11 )

[node name="MeshInstance4" type="MeshInstance" parent="Structures"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1008.3, 35.2952, 1608.54 )
mesh = SubResource( 10 )
material/0 = null

[node name="StaticBody3" type="StaticBody" parent="Structures/MeshInstance4"]

[node name="CollisionShape" type="CollisionShape" parent="Structures/MeshInstance4/StaticBody3"]
shape = SubResource( 11 )

[node name="MeshInstance2" type="MeshInstance" parent="Structures"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -281.492, 35.2952, -467.689 )
mesh = SubResource( 10 )
material/0 = null

[node name="StaticBody4" type="StaticBody" parent="Structures/MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="Structures/MeshInstance2/StaticBody4"]
shape = SubResource( 11 )

